[package]
name = "exp_backoff"
version = "0.1.5"
edition = "2024"
authors = ["flowerinthenight <root@flowerinthenight.com>"]
description = "Jittered exponential backoff implementation in Rust."
license = "MIT"
repository = "https://github.com/flowerinthenight/backoff-rs"
keywords = ["retry", "backoff", "exponential", "jittered"]

[dependencies]
rand = "0.9.0"
